# procon

./: .gitignore  CMakeLists.txt
test/: CMakeLists.txt
test/data_structure/: CMakeLists.txt  avl_tree_test.cpp  binary_indexed_tree_test.cpp  convex_hull_trick_test.cpp  disjoint_sparse_table_test.cpp  fibonacci_heap_test.cpp  lazy_segment_tree_test.cpp  partial_retroactive_priority_queue_test.cpp  segment_tree_test.cpp  sliding_window_aggregation_test.cpp  splay_tree_test.cpp  union_find_test.cpp
test/geometry/: CMakeLists.txt  arg_sort_test.cpp  convex_hull_test.cpp  point_test.cpp
test/graph/: CMakeLists.txt  dijkstra_test.cpp  dinic_test.cpp  ford_fulkerson_test.cpp
test/math/: CMakeLists.txt  binomial_coefficients_test.cpp  fast_fourier_transform_test.cpp  gcd_lcm_test.cpp  gcd_test.cpp  inverse_test.cpp  matrix_product_test.cpp  modint_test.cpp  power_test.cpp
test/string/: CMakeLists.txt  kmp_test.cpp  manacher_test.cpp  trie_test.cpp  z_algorithm_test.cpp
test/util/: CMakeLists.txt  chmin_chmax_test.cpp  coordinate_compression_test.cpp  mo_test.cpp  timer_test.cpp  vec_generator_test.cpp
