add_executable(AVLTreeTest avl_tree_test.cpp)
target_link_libraries(AVLTreeTest gtest_main)
gtest_discover_tests(AVLTreeTest)

add_executable(BinaryIndexedTreeTest binary_indexed_tree_test.cpp)
target_link_libraries(BinaryIndexedTreeTest gtest_main)
gtest_discover_tests(BinaryIndexedTreeTest)

add_executable(FibonacciHeapTest fibonacci_heap_test.cpp)
target_link_libraries(FibonacciHeapTest gtest_main)
gtest_discover_tests(FibonacciHeapTest)

add_executable(LazySegmentTreeTest lazy_segment_tree_test.cpp)
target_link_libraries(LazySegmentTreeTest gtest_main)
gtest_discover_tests(LazySegmentTreeTest)

add_executable(SegmentTreeTest segment_tree_test.cpp)
target_link_libraries(SegmentTreeTest gtest_main)
gtest_discover_tests(SegmentTreeTest)

add_executable(SlidingWindowAggregationTest sliding_window_aggregation_test.cpp)
target_link_libraries(SlidingWindowAggregationTest gtest_main)
gtest_discover_tests(SlidingWindowAggregationTest)

add_executable(SplayTreeTest splay_tree_test.cpp)
target_link_libraries(SplayTreeTest gtest_main)
gtest_discover_tests(SplayTreeTest)

add_executable(UnionFindTest union_find_test.cpp)
target_link_libraries(UnionFindTest gtest_main)
gtest_discover_tests(UnionFindTest)
