add_executable(DijkstraTest dijkstra_test.cpp)
target_link_libraries(DijkstraTest gtest_main)
gtest_discover_tests(DijkstraTest)

add_executable(DinicTest dinic_test.cpp)
target_link_libraries(DinicTest gtest_main)
gtest_discover_tests(DinicTest)

add_executable(FordFulkersonTest ford_fulkerson_test.cpp)
target_link_libraries(FordFulkersonTest gtest_main)
gtest_discover_tests(FordFulkersonTest)
